# LogFetcher

./: .gitignore  CHANGES  COPYRIGHT  Makefile.am  Makefile.in  PERL_MODULES  README  configure  configure.ac
etc/: Makefile.am  Makefile.in  logfetcher.cfg  logfetcher.cfg.dist
lib/: LogFetcher.pm  Makefile.in
lib/LogFetcher/: Config.pm  HostChannel.pm
lib/LogFetcher/Command/: fetch.pm
t/: basic.t
